--- a/front/src/oss.css
+++ b/front/src/oss.css
@@ -14,9 +14,13 @@
  *  limitations under the License.
  */
 html {
-  height: 100%;
+  height: 100vh;
 }
 
 body {
-  height: 100%;
+  height: 100vh;
+}
+
+#root {
+  height: 100vh;
 }
