--- a/front/src/oss.css
+++ b/front/src/oss.css
@@ -22,5 +22,72 @@ body {
 }
 
 #root {
-  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  height: 100%;
 }
+
+.main {
+  overflow: hidden;
+  flex-grow: 2;
+  display: flex;
+}
+
+.index-view {
+  overflow: auto;
+  height: 100%;
+  width: 100%;
+}
+
+.ingest-view {
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  width: 100%;
+}
+
+.ingest-editor {
+  flex-grow: 2;
+  height: 100%;
+  width: 100%;
+}
+
+.query-view {
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  width: 100%;
+}
+
+.query-view .central {
+  flex-grow: 2;
+  overflow: hidden;
+  display: flex;
+}
+
+.query-builder {
+  flex-grow: 2;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+}
+
+.query-result {
+  overflow: hidden;
+  width: 50%;
+}
+
+.query-json {
+  flex-grow: 2;
+  overflow: hidden;
+}
+
+.query-help {
+  height: 25%;
+  overflow: auto;
+}
+
+
+
+
